<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Rick and Morty</string>
    <string name="characters">Characters</string>
    <string name="load_more">Load More</string>
    <string name="unable_to_connect">Unable to connect</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="try_again">Try Again</string>
    <string name="loading">Loading...</string>
    <string name="loading_characters">Load Characters...</string>
    <string name="character_details">Character Details</string>
    <string name="status">Status</string>
    <string name="species">Species</string>
    <string name="type">Type</string>
    <string name="gender">Gender</string>
    <string name="origin">Origin</string>
    <string name="location">Location</string>
    <string name="location_info">Location Info</string>
    <string name="current_location">Current Location</string>
    <string name="network_error">Network Error</string>
    <string name="error_loading_details">Error loading character details</string>
    <string name="app_title">Rick and Morty Characters</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="check_internet_and_retry">Please check your internet connection and try again</string>
    <string name="navigate_to_details">Navigate to details</string>
    <string name="no_connection">No connection</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="page_indicator">Page %1$d of %2$d</string>
    <string name="no_connection_navigation">No Internet Connection</string>
    <string name="loading_page">Loading page %1$d...</string>
    <string name="status_alive">Alive</string>
    <string name="status_dead">Dead</string>
    <string name="status_unknown">Unknown</string>
    <string name="status_indicator_desc">Character status indicator</string>
</resources>